setup for the runs

--- a/final assignment/TODO.ipynb
+++ b/final assignment/TODO.ipynb
@@ -31,18 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "<Logger EMA (DEBUG)>"
-      ]
+      "text/plain": "<Logger EMA (DEBUG)>"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
    "source": [
@@ -458,11 +456,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# as per request"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# setup the policies\n",
+    "from ema_workbench import Policy\n",
+    "policy_dict_base_request = {'0_RfR 0':1, \n",
+    "               '0_RfR 1':1,\n",
+    "               '0_RfR 2':1,\n",
+    "               '1_RfR 0':0,\n",
+    "               '1_RfR 1':0,\n",
+    "               '1_RfR 2':0,\n",
+    "               '2_RfR 0':0,\n",
+    "               '2_RfR 1':0,\n",
+    "               '2_RfR 2':0,\n",
+    "               '3_RfR 0':0,\n",
+    "               '3_RfR 1':0,\n",
+    "               '3_RfR 2':0,\n",
+    "               '4_RfR 0':0,\n",
+    "               '4_RfR 1':0,\n",
+    "               '4_RfR 2':0,\n",
+    "               'EWS_DaysToThreat':0,\n",
+    "               'A.1_DikeIncrease 0':0,\n",
+    "               'A.1_DikeIncrease 1':0,\n",
+    "               'A.1_DikeIncrease 2':0,\n",
+    "               'A.2_DikeIncrease 0':0,\n",
+    "               'A.2_DikeIncrease 1':0,\n",
+    "               'A.2_DikeIncrease 2':0,\n",
+    "               'A.3_DikeIncrease 0':0,\n",
+    "               'A.3_DikeIncrease 1':0,\n",
+    "               'A.3_DikeIncrease 2':0,\n",
+    "               'A.4_DikeIncrease 0':0,\n",
+    "               'A.4_DikeIncrease 1':0,\n",
+    "               'A.4_DikeIncrease 2':0,\n",
+    "               'A.5_DikeIncrease 0':0,\n",
+    "               'A.5_DikeIncrease 1':0,\n",
+    "               'A.5_DikeIncrease 2':0}\n",
+    "policy_dict_base_request_2 = {'0_RfR 0':0, \n",
+    "               '0_RfR 1':0,\n",
+    "               '0_RfR 2':0,\n",
+    "               '1_RfR 0':0,\n",
+    "               '1_RfR 1':0,\n",
+    "               '1_RfR 2':0,\n",
+    "               '2_RfR 0':0,\n",
+    "               '2_RfR 1':0,\n",
+    "               '2_RfR 2':0,\n",
+    "               '3_RfR 0':1,\n",
+    "               '3_RfR 1':1,\n",
+    "               '3_RfR 2':1,\n",
+    "               '4_RfR 0':0,\n",
+    "               '4_RfR 1':0,\n",
+    "               '4_RfR 2':0,\n",
+    "               'EWS_DaysToThreat':0,\n",
+    "               'A.1_DikeIncrease 0':0,\n",
+    "               'A.1_DikeIncrease 1':0,\n",
+    "               'A.1_DikeIncrease 2':0,\n",
+    "               'A.2_DikeIncrease 0':0,\n",
+    "               'A.2_DikeIncrease 1':0,\n",
+    "               'A.2_DikeIncrease 2':0,\n",
+    "               'A.3_DikeIncrease 0':0,\n",
+    "               'A.3_DikeIncrease 1':0,\n",
+    "               'A.3_DikeIncrease 2':0,\n",
+    "               'A.4_DikeIncrease 0':0,\n",
+    "               'A.4_DikeIncrease 1':0,\n",
+    "               'A.4_DikeIncrease 2':0,\n",
+    "               'A.5_DikeIncrease 0':0,\n",
+    "               'A.5_DikeIncrease 1':0,\n",
+    "               'A.5_DikeIncrease 2':0}\n",
+    "pols_request = [Policy('RFR policy 1', **policy_dict_request), Policy('RFR policy 4', **policy_dict_request_2) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "    results = evaluator.perform_experiments(scenarios = 1000,               #500\n",
+    "                                            policies=pols_request, reporting_interval=100)"
+   ]
   }
  ],
  "metadata": {
@@ -481,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
