wip not sure, but to be sure

--- a/final assignment/FinalRunNeat.ipynb
+++ b/final assignment/FinalRunNeat.ipynb
@@ -2233,24 +2233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "no expected_range is set for ['RfR Total Costs 0', 'RfR Total Costs 1', 'RfR Total Costs 2']",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-06ce0fe7c2e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mref_scenario\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScenario\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'reference'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mscen1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m convergence_metrics = [HyperVolume.from_outcomes(model.outcomes),\n\u001b[0m\u001b[1;32m     18\u001b[0m                        EpsilonProgress()]\n\u001b[1;32m     19\u001b[0m \u001b[0mepsilon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutcomes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/python38/lib/python3.8/site-packages/ema_workbench/em_framework/optimization.py\u001b[0m in \u001b[0;36mfrom_outcomes\u001b[0;34m(cls, outcomes)\u001b[0m\n\u001b[1;32m    508\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    509\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfrom_outcomes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutcomes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 510\u001b[0;31m         \u001b[0mranges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpected_range\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moutcomes\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    511\u001b[0m         \u001b[0mminimum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaximum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mranges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminimum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaximum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/python38/lib/python3.8/site-packages/ema_workbench/em_framework/optimization.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    508\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    509\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfrom_outcomes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutcomes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 510\u001b[0;31m         \u001b[0mranges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpected_range\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moutcomes\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    511\u001b[0m         \u001b[0mminimum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaximum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mranges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminimum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaximum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/python38/lib/python3.8/site-packages/ema_workbench/em_framework/outcomes.py\u001b[0m in \u001b[0;36mexpected_range\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    164\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mexpected_range\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_expected_range\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m             raise ValueError(\n\u001b[0m\u001b[1;32m    167\u001b[0m                 'no expected_range is set for {}'.format(\n\u001b[1;32m    168\u001b[0m                     self.variable_name))\n",
-      "\u001b[0;31mValueError\u001b[0m: no expected_range is set for ['RfR Total Costs 0', 'RfR Total Costs 1', 'RfR Total Costs 2']"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reference_values = {'Bmax': 175, 'Brate': 1.5, 'pfail': 0.5,\n",
     "                        'discount rate': 3.5,\n",
@@ -2278,12 +2263,7 @@
     "                                              epsilons=epsilon,\n",
     "                                              convergence=convergence_metrics,\n",
     "                                              reference=ref_scenario\n",
-    "                                              )\n",
-    "\n",
-    "# with MultiprocessingEvaluator(model) as evaluator:\n",
-    "#     results, convergence = evaluator.optimize(nfe=100000, searchover='levers',\n",
-    "#                                     epsilons=epsilon,\n",
-    "#                                     convergence=convergence_metrics)"
+    "                                              )"
    ]
   },
   {
@@ -2437,26 +2417,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nfe = 100000\n",
+    "with MultiprocessingEvaluator(model) as evaluator:\n",
+    "    results, convergence = evaluator.optimize(nfe=nfe,\n",
+    "                                              searchover='levers',\n",
+    "                                              epsilons=epsilon,\n",
+    "                                              convergence=convergence_metrics,\n",
+    "                                              reference=ref_scenario\n",
+    "                                              )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MOEA for "
+    "### MOEA for all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, planning_steps = problem_definition('damage, cost, deaths')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started\n",
+      "[MainProcess/INFO] generation 0: 0/10000 nfe\n",
+      "[MainProcess/INFO] generation 5: 500/10000 nfe\n",
+      "[MainProcess/INFO] generation 10: 1000/10000 nfe\n",
+      "[MainProcess/INFO] generation 15: 1499/10000 nfe\n",
+      "[MainProcess/INFO] generation 20: 1998/10000 nfe\n",
+      "[MainProcess/INFO] generation 25: 2497/10000 nfe\n",
+      "[MainProcess/INFO] generation 30: 2996/10000 nfe\n",
+      "[MainProcess/INFO] generation 35: 3493/10000 nfe\n",
+      "[MainProcess/INFO] generation 40: 3984/10000 nfe\n"
+     ]
+    }
+   ],
    "source": [
-    "model, planning_steps = problem_definition('damage, cost, deaths')"
+    "nfe=10000\n",
+    "\n",
+    "reference_values = {'Bmax': 175, 'Brate': 1.5, 'pfail': 0.5,\n",
+    "                        'discount rate': 3.5,\n",
+    "                        'ID flood wave shape': 4}\n",
+    "scen1 = {}\n",
+    "\n",
+    "for key in model.uncertainties:\n",
+    "    name_split = key.name.split('_')\n",
+    "\n",
+    "    if len(name_split) == 1:\n",
+    "        scen1.update({key.name: reference_values[key.name[:-2]]})\n",
+    "\n",
+    "    else:\n",
+    "        scen1.update({key.name: reference_values[name_split[1]]})\n",
+    "\n",
+    "ref_scenario = Scenario('reference', **scen1)\n",
+    "\n",
+    "convergence_metrics = [EpsilonProgress()]\n",
+    "epsilon = [0.05,] * len(model.outcomes)\n",
+    "\n",
+    "with MultiprocessingEvaluator(model) as evaluator:\n",
+    "    results, convergence = evaluator.optimize(nfe=nfe,\n",
+    "                                              searchover='levers',\n",
+    "                                              epsilons=epsilon,\n",
+    "                                              convergence=convergence_metrics,\n",
+    "                                              reference=ref_scenario\n",
+    "                                              )"
    ]
   },
   {
@@ -2467,11 +2509,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mordm for A4 and A5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, planning_steps = problem_definition('A4, A5 vars')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mordm for all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, planning_steps = problem_definition('damage, cost, deaths')"
+   ]
   },
   {
    "cell_type": "markdown",
