--- a/final assignment/FinalRunNeatOptimization.ipynb
+++ b/final assignment/FinalRunNeatOptimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<Logger EMA (DEBUG)>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +100,45 @@
     "\n",
     "convergence_metrics = [EpsilonProgress()]\n",
     "epsilon = [0.05,] * len(model.outcomes)\n",
-    "nfe=100000"
+    "nfe=10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started\n",
+      "[MainProcess/INFO] generation 0: 0/10000 nfe\n",
+      "[MainProcess/INFO] generation 5: 499/10000 nfe\n",
+      "[MainProcess/INFO] generation 10: 994/10000 nfe\n",
+      "[MainProcess/INFO] generation 15: 1493/10000 nfe\n",
+      "[MainProcess/INFO] generation 20: 1993/10000 nfe\n",
+      "[MainProcess/INFO] generation 25: 2487/10000 nfe\n",
+      "[MainProcess/INFO] generation 30: 2987/10000 nfe\n",
+      "[MainProcess/INFO] generation 35: 3484/10000 nfe\n",
+      "[MainProcess/INFO] generation 40: 3980/10000 nfe\n",
+      "[MainProcess/INFO] generation 45: 4480/10000 nfe\n",
+      "[MainProcess/INFO] generation 50: 4980/10000 nfe\n",
+      "[MainProcess/INFO] generation 55: 5477/10000 nfe\n",
+      "[MainProcess/INFO] generation 60: 5975/10000 nfe\n",
+      "[MainProcess/INFO] generation 65: 6472/10000 nfe\n",
+      "[MainProcess/INFO] generation 70: 6969/10000 nfe\n",
+      "[MainProcess/INFO] generation 75: 7463/10000 nfe\n",
+      "[MainProcess/INFO] generation 80: 7960/10000 nfe\n",
+      "[MainProcess/INFO] generation 85: 8459/10000 nfe\n",
+      "[MainProcess/INFO] generation 90: 8958/10000 nfe\n",
+      "[MainProcess/INFO] generation 95: 9455/10000 nfe\n",
+      "[MainProcess/INFO] generation 100: 9949/10000 nfe\n",
+      "[MainProcess/INFO] optimization completed, found 2 solutions\n",
+      "[MainProcess/INFO] terminating pool\n"
+     ]
+    }
+   ],
    "source": [
     "with MultiprocessingEvaluator(model) as evaluator:\n",
     "    results, convergence = evaluator.optimize(nfe=nfe,\n",
@@ -150,7 +181,6 @@
    ],
    "source": [
     "## epsilon 0.5 9 solutions with 10000 nfe\n",
-    "fig, ax1 = plt.subplots(ncols=2, sharex=True)\n",
     "fig, ax1 = plt.subplots(ncols=1)\n",
     "ax1.plot(convergence.epsilon_progress)\n",
     "ax1.set_xlabel('nr. of generations')\n",
@@ -360,7 +390,6 @@
     }
    ],
    "source": [
-    "fig, ax1 = plt.subplots(ncols=2, sharex=True)\n",
     "fig, ax1 = plt.subplots(ncols=1)\n",
     "ax1.plot(convergence.epsilon_progress)\n",
     "ax1.set_xlabel('nr. of generations')\n",
@@ -1295,6 +1324,350 @@
     "    moro_total = load_results('./data/exp/moro1k_NoCostLimit.tar.gz')\n",
     "    moro_total, moro_total = moro_total"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rerunning the optimalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, planning_steps = problem_definition('damage, cost, deaths')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_values = {'Bmax': 350, 'Brate': 10, 'pfail': 0.1,\n",
+    "                        'discount rate': 1.5,\n",
+    "                        'ID flood wave shape': 4}\n",
+    "scen1 = {}\n",
+    "\n",
+    "for key in model.uncertainties:\n",
+    "    name_split = key.name.split('_')\n",
+    "\n",
+    "    if len(name_split) == 1:\n",
+    "        scen1.update({key.name: reference_values[key.name[:-2]]})\n",
+    "\n",
+    "    else:\n",
+    "        scen1.update({key.name: reference_values[name_split[1]]})\n",
+    "\n",
+    "ref_scenario = Scenario('reference', **scen1)\n",
+    "\n",
+    "convergence_metrics = [EpsilonProgress()]\n",
+    "epsilon = [0.05,] * len(model.outcomes)\n",
+    "nfe=50000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started\n",
+      "[MainProcess/INFO] generation 0: 0/50000 nfe\n",
+      "[MainProcess/INFO] generation 5: 494/50000 nfe\n",
+      "[MainProcess/INFO] generation 10: 993/50000 nfe\n",
+      "[MainProcess/INFO] generation 15: 1492/50000 nfe\n",
+      "[MainProcess/INFO] generation 20: 1991/50000 nfe\n",
+      "[MainProcess/INFO] generation 25: 2488/50000 nfe\n",
+      "[MainProcess/INFO] generation 30: 2987/50000 nfe\n",
+      "[MainProcess/INFO] generation 35: 3481/50000 nfe\n",
+      "[MainProcess/INFO] generation 40: 3975/50000 nfe\n",
+      "[MainProcess/INFO] generation 45: 4465/50000 nfe\n",
+      "[MainProcess/INFO] generation 50: 4962/50000 nfe\n",
+      "[MainProcess/INFO] generation 55: 5457/50000 nfe\n",
+      "[MainProcess/INFO] generation 60: 5949/50000 nfe\n",
+      "[MainProcess/INFO] generation 65: 6437/50000 nfe\n",
+      "[MainProcess/INFO] generation 70: 6907/50000 nfe\n",
+      "[MainProcess/INFO] generation 75: 7388/50000 nfe\n",
+      "[MainProcess/INFO] generation 80: 7853/50000 nfe\n",
+      "[MainProcess/INFO] generation 85: 8325/50000 nfe\n",
+      "[MainProcess/INFO] generation 90: 8812/50000 nfe\n",
+      "[MainProcess/INFO] generation 95: 9299/50000 nfe\n",
+      "[MainProcess/INFO] generation 100: 9790/50000 nfe\n",
+      "[MainProcess/INFO] generation 105: 10582/50000 nfe\n",
+      "[MainProcess/INFO] generation 110: 11412/50000 nfe\n",
+      "[MainProcess/INFO] generation 115: 12235/50000 nfe\n",
+      "[MainProcess/INFO] generation 120: 13060/50000 nfe\n",
+      "[MainProcess/INFO] generation 125: 13890/50000 nfe\n",
+      "[MainProcess/INFO] generation 130: 14694/50000 nfe\n",
+      "[MainProcess/INFO] generation 135: 15504/50000 nfe\n",
+      "[MainProcess/INFO] generation 140: 16328/50000 nfe\n",
+      "[MainProcess/INFO] generation 145: 17148/50000 nfe\n",
+      "[MainProcess/INFO] generation 150: 17971/50000 nfe\n",
+      "[MainProcess/INFO] generation 155: 18783/50000 nfe\n",
+      "[MainProcess/INFO] generation 160: 19612/50000 nfe\n",
+      "[MainProcess/INFO] generation 165: 20444/50000 nfe\n",
+      "[MainProcess/INFO] generation 170: 21277/50000 nfe\n",
+      "[MainProcess/INFO] generation 175: 22112/50000 nfe\n",
+      "[MainProcess/INFO] generation 180: 22938/50000 nfe\n",
+      "[MainProcess/INFO] generation 185: 23765/50000 nfe\n",
+      "[MainProcess/INFO] generation 190: 24594/50000 nfe\n",
+      "[MainProcess/INFO] generation 195: 25419/50000 nfe\n",
+      "[MainProcess/INFO] generation 200: 26249/50000 nfe\n",
+      "[MainProcess/INFO] generation 205: 28123/50000 nfe\n",
+      "[MainProcess/INFO] generation 210: 30389/50000 nfe\n",
+      "[MainProcess/INFO] generation 215: 32634/50000 nfe\n",
+      "[MainProcess/INFO] generation 220: 34878/50000 nfe\n",
+      "[MainProcess/INFO] generation 225: 37115/50000 nfe\n",
+      "[MainProcess/INFO] generation 230: 39353/50000 nfe\n",
+      "[MainProcess/INFO] generation 235: 41591/50000 nfe\n",
+      "[MainProcess/INFO] generation 240: 43830/50000 nfe\n",
+      "[MainProcess/INFO] generation 245: 46068/50000 nfe\n",
+      "[MainProcess/INFO] generation 250: 48303/50000 nfe\n",
+      "[MainProcess/INFO] optimization completed, found 186 solutions\n",
+      "[MainProcess/INFO] terminating pool\n"
+     ]
+    }
+   ],
+   "source": [
+    "with MultiprocessingEvaluator(model) as evaluator:\n",
+    "    results, convergence = evaluator.optimize(nfe=nfe,\n",
+    "                                              searchover='levers',\n",
+    "                                              epsilons=epsilon,\n",
+    "                                              convergence=convergence_metrics,\n",
+    "                                              reference=ref_scenario\n",
+    "                                              )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = results, convergence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] results saved successfully to /home/jovyan/work/final assignment/data/exp/worstcaseopt.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_results(total, './data/exp/worstcaseopt.tar.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_values = {'Bmax': 350, 'Brate': 10, 'pfail': 0.9,\n",
+    "                        'discount rate': 1.5,\n",
+    "                        'ID flood wave shape': 4}\n",
+    "scen1 = {}\n",
+    "\n",
+    "for key in model.uncertainties:\n",
+    "    name_split = key.name.split('_')\n",
+    "\n",
+    "    if len(name_split) == 1:\n",
+    "        scen1.update({key.name: reference_values[key.name[:-2]]})\n",
+    "\n",
+    "    else:\n",
+    "        scen1.update({key.name: reference_values[name_split[1]]})\n",
+    "\n",
+    "ref_scenario = Scenario('reference', **scen1)\n",
+    "\n",
+    "convergence_metrics = [EpsilonProgress()]\n",
+    "epsilon = [0.05,] * len(model.outcomes)\n",
+    "nfe=50000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started\n",
+      "[MainProcess/INFO] generation 0: 0/50000 nfe\n",
+      "[MainProcess/INFO] generation 5: 499/50000 nfe\n",
+      "[MainProcess/INFO] generation 10: 998/50000 nfe\n",
+      "[MainProcess/INFO] generation 15: 1494/50000 nfe\n",
+      "[MainProcess/INFO] generation 20: 1990/50000 nfe\n",
+      "[MainProcess/INFO] generation 25: 2488/50000 nfe\n",
+      "[MainProcess/INFO] generation 30: 2987/50000 nfe\n",
+      "[MainProcess/INFO] generation 35: 3482/50000 nfe\n",
+      "[MainProcess/INFO] generation 40: 3977/50000 nfe\n",
+      "[MainProcess/INFO] generation 45: 4473/50000 nfe\n",
+      "[MainProcess/INFO] generation 50: 4957/50000 nfe\n",
+      "[MainProcess/INFO] generation 55: 5418/50000 nfe\n",
+      "[MainProcess/INFO] generation 60: 5894/50000 nfe\n",
+      "[MainProcess/INFO] generation 65: 6348/50000 nfe\n",
+      "[MainProcess/INFO] generation 70: 6829/50000 nfe\n",
+      "[MainProcess/INFO] generation 75: 7291/50000 nfe\n",
+      "[MainProcess/INFO] generation 80: 7753/50000 nfe\n",
+      "[MainProcess/INFO] generation 85: 8233/50000 nfe\n",
+      "[MainProcess/INFO] generation 90: 8691/50000 nfe\n",
+      "[MainProcess/INFO] generation 95: 9161/50000 nfe\n",
+      "[MainProcess/INFO] generation 100: 9637/50000 nfe\n",
+      "[MainProcess/INFO] generation 105: 9976/50000 nfe\n",
+      "[MainProcess/INFO] generation 110: 10324/50000 nfe\n",
+      "[MainProcess/INFO] generation 115: 10661/50000 nfe\n",
+      "[MainProcess/INFO] generation 120: 10999/50000 nfe\n",
+      "[MainProcess/INFO] generation 125: 11336/50000 nfe\n",
+      "[MainProcess/INFO] generation 130: 11675/50000 nfe\n",
+      "[MainProcess/INFO] generation 135: 12015/50000 nfe\n",
+      "[MainProcess/INFO] generation 140: 12355/50000 nfe\n",
+      "[MainProcess/INFO] generation 145: 12706/50000 nfe\n",
+      "[MainProcess/INFO] generation 150: 13038/50000 nfe\n",
+      "[MainProcess/INFO] generation 155: 13380/50000 nfe\n",
+      "[MainProcess/INFO] generation 160: 13726/50000 nfe\n",
+      "[MainProcess/INFO] generation 165: 14065/50000 nfe\n",
+      "[MainProcess/INFO] generation 170: 14406/50000 nfe\n",
+      "[MainProcess/INFO] generation 175: 14750/50000 nfe\n",
+      "[MainProcess/INFO] generation 180: 15090/50000 nfe\n",
+      "[MainProcess/INFO] generation 185: 15434/50000 nfe\n",
+      "[MainProcess/INFO] generation 190: 15779/50000 nfe\n",
+      "[MainProcess/INFO] generation 195: 16115/50000 nfe\n",
+      "[MainProcess/INFO] generation 200: 16456/50000 nfe\n",
+      "[MainProcess/INFO] generation 205: 16798/50000 nfe\n",
+      "[MainProcess/INFO] generation 210: 17130/50000 nfe\n",
+      "[MainProcess/INFO] generation 215: 17471/50000 nfe\n",
+      "[MainProcess/INFO] generation 220: 17815/50000 nfe\n",
+      "[MainProcess/INFO] generation 225: 18157/50000 nfe\n",
+      "[MainProcess/INFO] generation 230: 18505/50000 nfe\n",
+      "[MainProcess/INFO] generation 235: 18846/50000 nfe\n",
+      "[MainProcess/INFO] generation 240: 19196/50000 nfe\n",
+      "[MainProcess/INFO] generation 245: 19541/50000 nfe\n",
+      "[MainProcess/INFO] generation 250: 19883/50000 nfe\n",
+      "[MainProcess/INFO] generation 255: 20228/50000 nfe\n",
+      "[MainProcess/INFO] generation 260: 20577/50000 nfe\n",
+      "[MainProcess/INFO] generation 265: 20924/50000 nfe\n",
+      "[MainProcess/INFO] generation 270: 21269/50000 nfe\n",
+      "[MainProcess/INFO] generation 275: 21610/50000 nfe\n",
+      "[MainProcess/INFO] generation 280: 21952/50000 nfe\n",
+      "[MainProcess/INFO] generation 285: 22296/50000 nfe\n",
+      "[MainProcess/INFO] generation 290: 22645/50000 nfe\n",
+      "[MainProcess/INFO] generation 295: 22997/50000 nfe\n",
+      "[MainProcess/INFO] generation 300: 23346/50000 nfe\n",
+      "[MainProcess/INFO] generation 305: 23683/50000 nfe\n",
+      "[MainProcess/INFO] generation 310: 24034/50000 nfe\n",
+      "[MainProcess/INFO] generation 315: 24380/50000 nfe\n",
+      "[MainProcess/INFO] generation 320: 24729/50000 nfe\n",
+      "[MainProcess/INFO] generation 325: 25066/50000 nfe\n",
+      "[MainProcess/INFO] generation 330: 25406/50000 nfe\n",
+      "[MainProcess/INFO] generation 335: 25747/50000 nfe\n",
+      "[MainProcess/INFO] generation 340: 26091/50000 nfe\n",
+      "[MainProcess/INFO] generation 345: 26435/50000 nfe\n",
+      "[MainProcess/INFO] generation 350: 26781/50000 nfe\n",
+      "[MainProcess/INFO] generation 355: 27133/50000 nfe\n",
+      "[MainProcess/INFO] generation 360: 27476/50000 nfe\n",
+      "[MainProcess/INFO] generation 365: 27823/50000 nfe\n",
+      "[MainProcess/INFO] generation 370: 28165/50000 nfe\n",
+      "[MainProcess/INFO] generation 375: 28509/50000 nfe\n",
+      "[MainProcess/INFO] generation 380: 28859/50000 nfe\n",
+      "[MainProcess/INFO] generation 385: 29200/50000 nfe\n",
+      "[MainProcess/INFO] generation 390: 29531/50000 nfe\n",
+      "[MainProcess/INFO] generation 395: 29871/50000 nfe\n",
+      "[MainProcess/INFO] generation 400: 30207/50000 nfe\n",
+      "[MainProcess/INFO] generation 405: 30551/50000 nfe\n",
+      "[MainProcess/INFO] generation 410: 30900/50000 nfe\n",
+      "[MainProcess/INFO] generation 415: 31248/50000 nfe\n",
+      "[MainProcess/INFO] generation 420: 31593/50000 nfe\n",
+      "[MainProcess/INFO] generation 425: 31937/50000 nfe\n",
+      "[MainProcess/INFO] generation 430: 32281/50000 nfe\n",
+      "[MainProcess/INFO] generation 435: 32623/50000 nfe\n",
+      "[MainProcess/INFO] generation 440: 32968/50000 nfe\n",
+      "[MainProcess/INFO] generation 445: 33314/50000 nfe\n",
+      "[MainProcess/INFO] generation 450: 33660/50000 nfe\n",
+      "[MainProcess/INFO] generation 455: 33999/50000 nfe\n",
+      "[MainProcess/INFO] generation 460: 34344/50000 nfe\n",
+      "[MainProcess/INFO] generation 465: 34692/50000 nfe\n",
+      "[MainProcess/INFO] generation 470: 35038/50000 nfe\n",
+      "[MainProcess/INFO] generation 475: 35388/50000 nfe\n",
+      "[MainProcess/INFO] generation 480: 35734/50000 nfe\n",
+      "[MainProcess/INFO] generation 485: 36076/50000 nfe\n",
+      "[MainProcess/INFO] generation 490: 36421/50000 nfe\n",
+      "[MainProcess/INFO] generation 495: 36764/50000 nfe\n",
+      "[MainProcess/INFO] generation 500: 37107/50000 nfe\n",
+      "[MainProcess/INFO] generation 505: 37454/50000 nfe\n",
+      "[MainProcess/INFO] generation 510: 37798/50000 nfe\n",
+      "[MainProcess/INFO] generation 515: 38143/50000 nfe\n",
+      "[MainProcess/INFO] generation 520: 38487/50000 nfe\n",
+      "[MainProcess/INFO] generation 525: 38824/50000 nfe\n",
+      "[MainProcess/INFO] generation 530: 39161/50000 nfe\n",
+      "[MainProcess/INFO] generation 535: 39496/50000 nfe\n",
+      "[MainProcess/INFO] generation 540: 39848/50000 nfe\n",
+      "[MainProcess/INFO] generation 545: 40189/50000 nfe\n",
+      "[MainProcess/INFO] generation 550: 40530/50000 nfe\n",
+      "[MainProcess/INFO] generation 555: 40864/50000 nfe\n",
+      "[MainProcess/INFO] generation 560: 41210/50000 nfe\n",
+      "[MainProcess/INFO] generation 565: 41554/50000 nfe\n",
+      "[MainProcess/INFO] generation 570: 41907/50000 nfe\n",
+      "[MainProcess/INFO] generation 575: 42258/50000 nfe\n",
+      "[MainProcess/INFO] generation 580: 42601/50000 nfe\n",
+      "[MainProcess/INFO] generation 585: 42951/50000 nfe\n",
+      "[MainProcess/INFO] generation 590: 43296/50000 nfe\n",
+      "[MainProcess/INFO] generation 595: 43637/50000 nfe\n",
+      "[MainProcess/INFO] generation 600: 43983/50000 nfe\n",
+      "[MainProcess/INFO] generation 605: 44333/50000 nfe\n",
+      "[MainProcess/INFO] generation 610: 44684/50000 nfe\n",
+      "[MainProcess/INFO] generation 615: 45032/50000 nfe\n",
+      "[MainProcess/INFO] generation 620: 45376/50000 nfe\n",
+      "[MainProcess/INFO] generation 625: 45725/50000 nfe\n",
+      "[MainProcess/INFO] generation 630: 46071/50000 nfe\n",
+      "[MainProcess/INFO] generation 635: 46415/50000 nfe\n",
+      "[MainProcess/INFO] generation 640: 46751/50000 nfe\n",
+      "[MainProcess/INFO] generation 645: 47093/50000 nfe\n",
+      "[MainProcess/INFO] generation 650: 47436/50000 nfe\n",
+      "[MainProcess/INFO] generation 655: 47779/50000 nfe\n",
+      "[MainProcess/INFO] generation 660: 48126/50000 nfe\n",
+      "[MainProcess/INFO] generation 665: 48468/50000 nfe\n",
+      "[MainProcess/INFO] generation 670: 48800/50000 nfe\n",
+      "[MainProcess/INFO] generation 675: 49148/50000 nfe\n",
+      "[MainProcess/INFO] generation 680: 49489/50000 nfe\n",
+      "[MainProcess/INFO] generation 685: 49829/50000 nfe\n",
+      "[MainProcess/INFO] optimization completed, found 19 solutions\n",
+      "[MainProcess/INFO] terminating pool\n",
+      "[MainProcess/INFO] results saved successfully to /home/jovyan/work/final assignment/data/exp/worstcaseoptv2.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "with MultiprocessingEvaluator(model) as evaluator:\n",
+    "    total = evaluator.optimize(nfe=nfe,\n",
+    "                                              searchover='levers',\n",
+    "                                              epsilons=epsilon,\n",
+    "                                              convergence=convergence_metrics,\n",
+    "                                              reference=ref_scenario\n",
+    "                                              )\n",
+    "save_results(total, './data/exp/worstcaseoptv2.tar.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
