added the function helper functions to the first book

--- a/final assignment/FinalRunNeat.ipynb
+++ b/final assignment/FinalRunNeat.ipynb
@@ -56,6 +56,8 @@
     "from dike_model_function import DikeNetwork\n",
     "\n",
     "from ProblemFormulationSelf import problem_definition\n",
+    "from helper import agg\n",
+    "from helper import plot_sob\n",
     "\n",
     "from ema_workbench import save_results\n",
     "from ema_workbench.util.utilities import load_results\n",
