--- a/final assignment/FinalRunNeatOptimization.ipynb
+++ b/final assignment/FinalRunNeatOptimization.ipynb
@@ -13,22 +13,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\teres\\Anaconda3\\lib\\site-packages\\ema_workbench\\em_framework\\evaluators.py:22: UserWarning: ipyparallel not installed - IpyparalleEvaluator not available\n",
-      "  'ipyparallel not installed - IpyparalleEvaluator not available')\n"
-     ]
-    },
-    {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "<Logger EMA (DEBUG)>"
-      ]
+      "text/plain": "<Logger EMA (DEBUG)>"
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
    "source": [
@@ -1737,22 +1727,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "[MainProcess/INFO] results loaded succesfully from C:\\Users\\teres\\Documents\\EPA1361-Model-based Decison Making\\EPA1361\\final assignment\\data\\exp\\MOEA100k.tar.gz\n"
-     ]
+     "name": "stderr",
+     "text": "[MainProcess/INFO] results loaded succesfully from c:\\TEMP\\Programming\\EPA1361\\final assignment\\data\\exp\\MOEA100k.tar.gz\n"
     }
    ],
    "source": [
     "total = load_results('./data/exp/MOEA100k.tar.gz')\n",
     "archive, convergence = total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_columns = 50\n",
+    "pol_sol = archive.loc[[10]]"
    ]
   },
   {
@@ -3145,20 +3145,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "[MainProcess/INFO] results loaded succesfully from C:\\Users\\teres\\Documents\\EPA1361-Model-based Decison Making\\EPA1361\\final assignment\\data\\exp\\worstcaseoptv2.tar.gz\n"
-     ]
+     "name": "stderr",
+     "text": "[MainProcess/INFO] results loaded succesfully from c:\\TEMP\\Programming\\EPA1361\\final assignment\\data\\exp\\worstcaseoptv2.tar.gz\n"
     }
    ],
    "source": [
     "moea_total = load_results('./data/exp/worstcaseoptv2.tar.gz')\n",
     "moea_1k_results, moea_1k_convergence = moea_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pol_sol2 = moea_1k_results.loc[[17]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol_com = pd.concat([pol_sol, pol_sol2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol_com.to_csv('./Tables/SolutionsBest.csv')"
    ]
   },
   {
@@ -4057,7 +4084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
