--- a/final assignment/FinalRunNeat.ipynb
+++ b/final assignment/FinalRunNeat.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First of all we will do a model exploration in a base case (no policies implemented); <br/>\n",
-    "Next we will do a model exploration with random policies; <br/>\n",
-    "after a sensitivity and vulnerability analysis will be done; <br/>\n",
-    "at last a Optimization will be run to find optimal solutions. <br/>\n",
+    "This notebooks contains the exploratory modelling part\n",
     "\n",
-    "# 1. Model exploration"
+    "First of all,  we will do a model exploration in a base case (no policies implemented); <br/>\n",
+    "Next we will do a model exploration with random policies; <br/>\n",
+    "then scenario discovery and  sensitivity analysis will be done; <br/>\n",
+    "\n",
+    "\n",
+    "# Model exploration"
    ]
   },
   {
@@ -77,7 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Base case: No policy "
+    "## Open exploration\n",
+    "### 1.1 Base case: No policy "
    ]
   },
   {
@@ -119,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot the outcomes from no policy scenarios "
+    "##### Plot the outcomes from no policy scenarios "
    ]
   },
   {
@@ -266,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Ten random policies"
+    "### 1.2 Ten random policies"
    ]
   },
   {
@@ -434,14 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Vulnerability & Sensitivity Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.1 scenario discovery\n"
+    "## 2 scenario discovery\n"
    ]
   },
   {
@@ -1408,7 +1404,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Feature Scoring\n",
+    "## 3 Sensitivity Analysis \n",
+    "### 3.1 Feature scoring\n",
     "##### To better visualize the importance of each uncertainty and lever, feature scoring is used here to show how these levers/uncertainty factors influence the outcomes ( expected damage, expected total death and expected total cost)"
    ]
   },
@@ -1542,7 +1539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Sensitivity analysis using SOBOL"
+    "## 3.2 Sensitivity analysis using SOBOL"
    ]
   },
   {
@@ -4513,6 +4510,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In previous experiments, there are 10000 runs each in the random policies with 10. But this is not entirely possible for sobol, as this would run almost a million scenarios which would take roughly 5 days, so we chose to do more policies and less scenarios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -4616,7 +4620,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For levers: to be finished "
+    "#### For levers:\n",
+    "Due to the due limitation, we wer not able to work this part out"
    ]
   },
   {
